--- a/apps/todos/src/app/app.component.html
+++ b/apps/todos/src/app/app.component.html
@@ -1,1 +1,14 @@
-<locdt-nx-welcome></locdt-nx-welcome>
+<h1>Todos</h1>
+
+<ul>
+  <li *ngFor="let t of todos" class="todo">{{ t.title }}</li>
+</ul>
+
+<button id="add-todo" (click)="addTodo()">Add Todo</button>
+
+
+<h1>---------></h1>
+
+<locdt-todos [todos]="todos"></locdt-todos>
+
+<button (click)="addTodo()">Add Todo</button>
